--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -54,10 +54,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">#F8961E</td>
-        <td class="secondary">#277DA1</td>
-        <td class="accent1">#43AA8B</td>
-        <td class="accent2">#F94144
+        <td class="primary">#43aa8b</td>
+        <td class="secondary">#D17B0F</td>
+        <td class="accent1">#E63462</td>
+        <td class="accent2">#FFE66D
       </tr>
     </table>
 
