Add personal site content

--- a/film/site-plan.html
+++ b/film/site-plan.html
@@ -124,29 +124,29 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        The history of motion pictures dates back to the late 19th century, with the earliest experiments in moving images taking place in the 1870s and 1880s. While there is some debate among film historians about which specific film should be considered the first motion picture, there are several early films that played an important role in the development of cinema. We will show two of them.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/zoopraxiscope.jpg" alt="zoopraxiscope">
+        <img src="images/camera-obscura-drawing.jpg" alt="camera-obscura-drawing">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Horse in Motion</h3>
       <p>
-        [Written copy for the Page 2 here]
+        One of the earliest motion pictures is "Horse in Motion," a series of photographs taken by English photographer Eadweard Muybridge in 1878. Muybridge was hired by the industrialist Leland Stanford to settle a bet about whether a galloping horse ever had all four feet off the ground at once. To answer the question, Muybridge set up a series of cameras along a track and used tripwires to trigger the shutters as the horse ran past. He then used a device called a zoopraxiscope to project the images in sequence, creating the illusion of motion. While "Horse in Motion" was not a true movie in the sense that it was not projected onto a screen for an audience, it was a groundbreaking experiment in capturing and studying movement through photography.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/the_horse_in_motion_animation.jpg" alt="The Horse in Motion">
+        <img src="images/eadweard_muybridge.jpg" alt="Edward Muybridge">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Roundhay Garden Scene</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Another early motion picture is "Roundhay Garden Scene," filmed by French inventor Louis Le Prince in 1888. The film was only two seconds long and featured a short scene of people walking around in a garden. Le Prince used a camera he had designed himself, which captured images onto a single roll of film. He filmed the scene using a series of lenses that captured images at different angles, creating the illusion of motion when the film was played back. While "Roundhay Garden Scene" is often cited as the first motion picture, there is some debate over whether it truly counts as a movie, as it was never publicly shown during Le Prince's lifetime and there is no evidence that he intended it to be part of a larger narrative.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/roundhay_garden_scene.jpg" alt="Roundhay Garden Scene">
+        <img src="images/louis_le_prince.jpg" alt="Louis Le Prince">
 
       </ul>
       <hr>
