--- a/film/site-plan.html
+++ b/film/site-plan.html
@@ -87,8 +87,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Horse in Motion</a>
+        <a href="#">Roundhay Garden Scene</a>
       </nav>
       <hr>
       <h2>
@@ -99,10 +99,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Horse in Motion <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Roundhay Garden Scene  <!-- change this -->
         </div>
 
         <div class="top">
@@ -135,7 +135,7 @@
       <p>
         One of the earliest motion pictures is "Horse in Motion," a series of photographs taken by English photographer Eadweard Muybridge in 1878. Muybridge was hired by the industrialist Leland Stanford to settle a bet about whether a galloping horse ever had all four feet off the ground at once. To answer the question, Muybridge set up a series of cameras along a track and used tripwires to trigger the shutters as the horse ran past. He then used a device called a zoopraxiscope to project the images in sequence, creating the illusion of motion. While "Horse in Motion" was not a true movie in the sense that it was not projected onto a screen for an audience, it was a groundbreaking experiment in capturing and studying movement through photography.
       </p>
-      <p>Images for the Page 2</p>
+      <p>Images for the Horse in Motion</p>
         <img src="images/the_horse_in_motion_animation.jpg" alt="The Horse in Motion">
         <img src="images/eadweard_muybridge.jpg" alt="Edward Muybridge">
 
@@ -144,7 +144,7 @@
       <p>
         Another early motion picture is "Roundhay Garden Scene," filmed by French inventor Louis Le Prince in 1888. The film was only two seconds long and featured a short scene of people walking around in a garden. Le Prince used a camera he had designed himself, which captured images onto a single roll of film. He filmed the scene using a series of lenses that captured images at different angles, creating the illusion of motion when the film was played back. While "Roundhay Garden Scene" is often cited as the first motion picture, there is some debate over whether it truly counts as a movie, as it was never publicly shown during Le Prince's lifetime and there is no evidence that he intended it to be part of a larger narrative.
       </p>
-      <p>Images for the Page 3</p>
+      <p>Images for the Roundhay Garden Scene</p>
         <img src="images/roundhay_garden_scene.jpg" alt="Roundhay Garden Scene">
         <img src="images/louis_le_prince.jpg" alt="Louis Le Prince">
 
