--- a/film/site-plan.html
+++ b/film/site-plan.html
@@ -160,19 +160,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/film_wireframe-home.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Horse in Motion</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/film_wireframe-horse.png" alt="Horse in Motion page wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Roundhay Garden Scene</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/film_wireframe-garden.png" alt="Roundhay Garden Scene wireframe">
     </main>
   </body>
 
