Add link to site plan in footer

--- a/film/index.html
+++ b/film/index.html
@@ -39,6 +39,7 @@
     </main>
     <footer>
         <p>Copyright © 2023 Holden Leung</p>
+        <a href="site-plan.html">Site Plan</a>
     </footer>
 </body>
 </html>
