--- a/film/garden.html
+++ b/film/garden.html
@@ -31,6 +31,7 @@
     </main>
     <footer>
         <p>Copyright © 2023 Holden Leung</p>
+        <a href="site-plan.html">Site Plan</a>
     </footer>
 </body>
 </html>
