Add contents to all pages

--- a/film/garden.html
+++ b/film/garden.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roundhay Garden Scene</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
-        <a id="logo" href="index.html">
-            <img src="images/ff_logo_gld.jpeg" alt="First Film Logo">
+        <a id="logo-link" href="index.html">
+            <img src="images/ff_logo_trans.png" alt="First Film Logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
@@ -19,19 +20,22 @@
     </header>
     <main>
         <section id="hero">
-            <img src="images/roundhay_garden_scene.jpg" alt="Roundhay Garden Scene">
+            <img src="images/garden_scan.jpg" alt="Roundhay Garden scene film scan">
             <h1>The Roundhay Garden Scene</h1>
         </section>
-        <div id="home-containter">
-            <section>
-                <img src="images/louis_le_prince.jpg" alt="Louis Le Prince">
+        <div id="home-container">
+            <div id="passage">
+                <img src="images/louis_le_prince.jpg" alt="Louis Le Prince potrait">
                 <p>Another early motion picture is "Roundhay Garden Scene," filmed by French inventor Louis Le Prince in 1888. The film was only two seconds long and featured a short scene of people walking around in a garden. Le Prince used a camera he had designed himself, which captured images onto a single roll of film. He filmed the scene using a series of lenses that captured images at different angles, creating the illusion of motion when the film was played back. While "Roundhay Garden Scene" is often cited as the first motion picture, there is some debate over whether it truly counts as a movie, as it was never publicly shown during Le Prince's lifetime and there is no evidence that he intended it to be part of a larger narrative.</p>
-            </section>
+            </div>
         </div>
     </main>
     <footer>
-        <p>Copyright © 2023 Holden Leung</p>
-        <a href="site-plan.html">Site Plan</a>
+        <hr>
+        <div id="footer-container">
+            <p>Copyright © 2023 Holden Leung</p>
+            <p id="footer-link"><a href="site-plan.html">Site Plan</a></p>
+        </div>
     </footer>
 </body>
 </html>
