--- a/film/horse.html
+++ b/film/horse.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Horse in Motion</title>
+    <title>Horse in Motion | History of the First Motion Picture </title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
-        <a id="logo" href="index.html">
-            <img src="images/ff_logo_gld.jpeg" alt="First Film Logo">
+        <a id="logo-link" href="index.html">
+            <img src="images/ff_logo_trans.png" alt="First Film Logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
@@ -19,19 +20,22 @@
     </header>
     <main>
         <section id="hero">
-            <img src="images/the-horse-in-motion-eadweard-muybridge-1878.png" alt="Horse in Motion">
+            <img src="images/horse_scan.png" alt="Horse in Motion film scan">
             <h1>The Horse in Motion</h1>
         </section>
-        <div id="home-containter">
-            <section>
-                <img src="images/eadweard_muybridge.jpg" alt="Eadweard Muybridge">
+        <div id="home-container">
+            <div id="passage">
+                <img src="images/eadweard_muybridge.jpg" alt="Eadweard Muybridge potrait">
                 <p>One of the earliest motion pictures is "Horse in Motion," a series of photographs taken by English photographer Eadweard Muybridge in 1878. Muybridge was hired by the industrialist Leland Stanford to settle a bet about whether a galloping horse ever had all four feet off the ground at once. To answer the question, Muybridge set up a series of cameras along a track and used tripwires to trigger the shutters as the horse ran past. He then used a device called a zoopraxiscope to project the images in sequence, creating the illusion of motion. While "Horse in Motion" was not a true movie in the sense that it was not projected onto a screen for an audience, it was a groundbreaking experiment in capturing and studying movement through photography.</p>
-            </section>
+            </div>
         </div>
     </main>
     <footer>
-        <p>Copyright © 2023 Holden Leung</p>
-        <a href="site-plan.html">Site Plan</a>
+        <hr>
+        <div id="footer-container">
+            <p>Copyright © 2023 Holden Leung</p>
+            <p id="footer-link"><a href="site-plan.html">Site Plan</a></p>
+        </div>
     </footer>
 </body>
 </html>
