--- a/film/garden.html
+++ b/film/garden.html
@@ -20,7 +20,10 @@
     </header>
     <main>
         <section id="hero">
-            <img src="images/garden_scan.jpg" alt="Roundhay Garden scene film scan">
+            <video autoplay muted loop id="hero-video">
+                <source src="videos/garden.mp4" type="video/mp4">
+                Your browser does not support HTML5 video.
+            </video>
             <h1>The Roundhay Garden Scene</h1>
         </section>
         <div id="home-container">
