--- a/film/horse.html
+++ b/film/horse.html
@@ -20,7 +20,10 @@
     </header>
     <main>
         <section id="hero">
-            <img src="images/horse_scan.png" alt="Horse in Motion film scan">
+            <video autoplay muted loop id="hero-video">
+                <source src="videos/horse.mp4" type="video/mp4">
+                Your browser does not support HTML5 video.
+            </video>
             <h1>The Horse in Motion</h1>
         </section>
         <div id="home-container">
