--- a/film/horse.html
+++ b/film/horse.html
@@ -28,8 +28,11 @@
         </section>
         <div id="home-container">
             <div id="passage">
+                <p>
+                    One of the earliest motion pictures is "The Horse in Motion," a series of photographs taken by English photographer Eadweard Muybridge in 1878. Muybridge was hired by Leland Stanford, a wealthy racehorse owner and former governor of California, to settle a bet about whether a galloping horse ever had all four feet off the ground at once. To answer the question, Muybridge created a complex system of cameras and trip wires, which he set up along the side of a racetrack. As the horse galloped past, each camera was triggered in sequence, capturing a series of still photographs that showed the horse's motion at regular intervals. He then used a device called a zoopraxiscope to project the images in sequence, creating the illusion of motion. The resulting series of photographs proved beyond a doubt that all four of the horse's hooves did indeed leave the ground at the same time during a gallop.<br>
+                    <br>While "The Horse in Motion" was not a true movie, it showed that motion could be broken down into a series of discrete moments, each captured in a single photograph. This idea was fundamental to the development of motion pictures, which rely on the same basic principle of capturing a series of still images in sequence to create the illusion of motion.
+                </p>
                 <img src="images/eadweard_muybridge.jpg" alt="Eadweard Muybridge potrait">
-                <p>One of the earliest motion pictures is "Horse in Motion," a series of photographs taken by English photographer Eadweard Muybridge in 1878. Muybridge was hired by the industrialist Leland Stanford to settle a bet about whether a galloping horse ever had all four feet off the ground at once. To answer the question, Muybridge set up a series of cameras along a track and used tripwires to trigger the shutters as the horse ran past. He then used a device called a zoopraxiscope to project the images in sequence, creating the illusion of motion. While "Horse in Motion" was not a true movie in the sense that it was not projected onto a screen for an audience, it was a groundbreaking experiment in capturing and studying movement through photography.</p>
             </div>
         </div>
     </main>
