--- a/film/index.html
+++ b/film/index.html
@@ -26,7 +26,11 @@
         <div id="home-container">
             <div id="passage">
                 <img src="images/zoopraxiscope.jpg" alt="Zoopraxiscope">
-                <p>The history of motion pictures dates back to the late 19th century, with the earliest experiments in moving images taking place in the 1870s and 1880s. While there is some debate among film historians about which specific film should be considered the first motion picture, there are several early films that played an important role in the development of cinema. We will show two of them.</p>
+                <p>
+                    Over the years, motion pictures have become one of the most popular and influential forms of entertainment and art in the world. From the earliest experiments in capturing movement through photography to the sophisticated special effects and immersive experiences of modern blockbusters, the history of motion pictures is a rich and fascinating story that continues to evolve with each new technological innovation.<br>
+                    <br>The history of motion pictures dates back to the late 19th century, with the earliest experiments in moving images taking place in the 1870s and 1880s. While there is some debate among film historians about which specific film should be considered the first motion picture, there are several early films that played an important role in the development of cinema. This website will discuss two of them — "The Horse in Motion" and "Roundhay Garden Scene."<br>
+                    <br>Both of these works represent major achievements in the history of motion pictures. The Horse in Motion is important because it represents the first time that photography was used to capture motion in a scientific and systematic way. On the other hand, Roundhay Garden Scene is important because it was the first time that a series of still images were presented in sequence to create the illusion of motion.
+                </p>
             </div>
             <div id="subpage-container">
                 <a class="subpage-link" href="horse.html">
