--- a/film/site-plan.html
+++ b/film/site-plan.html
@@ -44,7 +44,7 @@
       <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
       <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
-      Palette URL: <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c" target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+      Palette URL: <a href="https://coolors.co/palette/c0a742-603140-ff773d-aea4bf-25291c" target="_blank">https://coolors.co/palette/c0a742-603140-ff773d-aea4bf-25291c</a>
 
 
       <table class="colors">
@@ -124,19 +124,25 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        The history of motion pictures dates back to the late 19th century, with the earliest experiments in moving images taking place in the 1870s and 1880s. While there is some debate among film historians about which specific film should be considered the first motion picture, there are several early films that played an important role in the development of cinema. We will show two of them.
+        Over the years, motion pictures have become one of the most popular and influential forms of entertainment and art in the world. From the earliest experiments in capturing movement through photography to the sophisticated special effects and immersive experiences of modern blockbusters, the history of motion pictures is a rich and fascinating story that continues to evolve with each new technological innovation.<br>
+        The history of motion pictures dates back to the late 19th century, with the earliest experiments in moving images taking place in the 1870s and 1880s. While there is some debate among film historians about which specific film should be considered the first motion picture, there are several early films that played an important role in the development of cinema. This website will discuss two of them — "The Horse in Motion" and "Roundhay Garden Scene."<br>
+        Both of these works represent major achievements in the history of motion pictures. The Horse in Motion is important because it represents the first time that photography was used to capture motion in a scientific and systematic way. On the other hand, Roundhay Garden Scene is important because it was the first time that a series of still images were presented in sequence to create the illusion of motion.
       </p>
       <p>Images for the Home page</p>
-        <img src="images/zoopraxiscope.jpg" alt="zoopraxiscope">
-        <img src="images/camera-obscura-mechanism.jpg" alt="Camera Obscura Mechanism">
-
+        <img src="images/camera_obscura.jpg" alt="Camera Obscura Illustration">
+        <img src="images/zoopraxiscope.jpg" alt="Zoopraxiscope">
+        <img src="images/horse.jpg" alt="The Horse in Motion">
+        <img src="images/garden.jpg" alt="Roundhay Garden Scene">
       </ul>
       <h3>Horse in Motion</h3>
       <p>
-        One of the earliest motion pictures is "Horse in Motion," a series of photographs taken by English photographer Eadweard Muybridge in 1878. Muybridge was hired by the industrialist Leland Stanford to settle a bet about whether a galloping horse ever had all four feet off the ground at once. To answer the question, Muybridge set up a series of cameras along a track and used tripwires to trigger the shutters as the horse ran past. He then used a device called a zoopraxiscope to project the images in sequence, creating the illusion of motion. While "Horse in Motion" was not a true movie in the sense that it was not projected onto a screen for an audience, it was a groundbreaking experiment in capturing and studying movement through photography.
+        One of the earliest motion pictures is "The Horse in Motion," a series of photographs taken by English photographer Eadweard Muybridge in 1878. Muybridge was hired by Leland Stanford, a wealthy racehorse owner and former governor of California, to settle a bet about whether a galloping horse ever had all four feet off the ground at once. To answer the question, Muybridge created a complex system of cameras and trip wires, which he set up along the side of a racetrack. As the horse galloped past, each camera was triggered in sequence, capturing a series of still photographs that showed the horse's motion at regular intervals. He then used a device called a zoopraxiscope to project the images in sequence, creating the illusion of motion. The resulting series of photographs proved beyond a doubt that all four of the horse's hooves did indeed leave the ground at the same time during a gallop.<br>
+        While "The Horse in Motion" was not a true movie, it showed that motion could be broken down into a series of discrete moments, each captured in a single photograph. This idea was fundamental to the development of motion pictures, which rely on the same basic principle of capturing a series of still images in sequence to create the illusion of motion.
       </p>
       <p>Images for the Horse in Motion</p>
-        <img src="images/horse_animation.jpg" alt="The Horse in Motion Animation">
+        <video controls>
+          <source src="videos/horse.mp4" type="video/mp4">Your browser does not support the video tag.
+        </video>
         <img src="images/eadweard_muybridge.jpg" alt="Edward Muybridge Potrait">
 
       </ul>
@@ -145,9 +151,10 @@
         Another early motion picture is "Roundhay Garden Scene," filmed by French inventor Louis Le Prince in 1888. The film was only two seconds long and featured a short scene of people walking around in a garden. Le Prince used a camera he had designed himself, which captured images onto a single roll of film. He filmed the scene using a series of lenses that captured images at different angles, creating the illusion of motion when the film was played back. While "Roundhay Garden Scene" is often cited as the first motion picture, there is some debate over whether it truly counts as a movie, as it was never publicly shown during Le Prince's lifetime and there is no evidence that he intended it to be part of a larger narrative.
       </p>
       <p>Images for the Roundhay Garden Scene</p>
-        <img src="images/garden_scan.jpg" alt="Roundhay Garden Scene Film Scan">
+        <video controls>
+          <source src="videos/garden.mp4" type="video/mp4">Your browser does not support the video tag.
+        </video>
         <img src="images/louis_le_prince.jpg" alt="Louis Le Prince Potrait">
-
       </ul>
       <hr>
       <h2>
